# sumcheck_tutorial

./: .gitignore  README.md  pyproject.toml  sumcheck.ipynb
.ipynb_checkpoints/: sumcheck-checkpoint.ipynb
