[tool.poetry]
name = "sum-check-tutorial"
version = "0.1.0"
description = "A tutorial on sum-check protocol"
authors = ["flyingnobita <46126470+flyingnobita@users.noreply.github.com>"]
readme = "README.md"
package-mode = false
license = "MIT"
repository = "https://github.com/flyingnobita/sumcheck-tutorial"
keywords = ["cryptography", "sum-check", "interactive-proof"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12.6"
numpy = "^2.0.2"
jupyterlab = "^4.3.4"
sympy = "^1.13.1"
matplotlib = "^3.10.1"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
